CRUD & validation updated

--- a/health/pom.xml
+++ b/health/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>jersey-media-json-binding</artifactId>
         </dependency>
         -->
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
+		</dependency>
     </dependencies>
     <properties>
         <jersey.version>3.0.0-M1</jersey.version>
